--- a/maria_emojinal/Base.lproj/Main.storyboard
+++ b/maria_emojinal/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="159" y="513" width="97" height="120"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="90"/>
-                                <state key="normal" title="🥲"/>
+                                <state key="normal" title="😢"/>
                                 <connections>
                                     <action selector="showMessageWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gYN-ir-AVh"/>
                                 </connections>
